Gave current EA translations a readability edit.

--- a/01_agama/ekottarika/12/EA_12_01.md
+++ b/01_agama/ekottarika/12/EA_12_01.md
@@ -14,24 +14,26 @@ next: ../19/EA_19_01.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There’s one entry to the path that purifies the conduct of sentient beings and rids them of grief. Having any vexations, they attain great wisdom and achieve realization of nirvāṇa. That is, they will cease the five hindrances and reflect on the four stations of mindfulness. What’s called this one entry? It refers to focusing the mind. This is called the one entry. What is the path? It refers to the noble eightfold path, which is 1. right view, 2. right control, 3. right action, 4. right livelihood, 5. right method, 6. right speech, 7. right mindfulness, and 8. right concentration. These are called the path, and this is called the one entry to that path.
+2\. It was then that the Bhagavān addressed the monks, “There’s one entry to the path that purifies the conduct of sentient beings and rids them of grief. Lacking any afflictions, they’ll attain great wisdom and achieve realization of nirvāṇa [by it]. That is, they will cease the five hindrances and reflect on the four stations of mindfulness.
+
+“What’s called this one entry? It refers to focusing the mind. This is called the one entry. What is the path? It refers to the noble eightfold path, which is 1. right view, 2. right control, 3. right action, 4. right livelihood, 5. right method, 6. right speech, 7. right mindfulness, and 8. right concentration. These are called the path, and this is called the one entry to that path.
 {: #p2}
 
-3\. “What are the five hindrances that will cease? That refers to the hindrance of desire, hindrance of anger, hindrance of restlessness, hindrance of drowsiness, and hindrance of doubt. These are called the five hindrances that will cease.
+3\. “What are the five hindrances that it will cease? They are the hindrance of desire, hindrance of anger, hindrance of restlessness, hindrance of drowsiness, and hindrance of doubt. These are called the five hindrances that it will cease.
 {: #p3}
 
-4\. “How do they reflect on the four stations of mindfulness? Here, a monk contemplates his own body internally, turning away bad thoughts and having no grief. He contemplates his own body externally, turning away bad thoughts and having no grief. He contemplates his body internally and externally, turning away bad thoughts and having no grief. He contemplates feelings as feelings internally and relaxes himself. He contemplates feelings as feelings externally and contemplates feelings as feelings internally and externally. He contemplates his mind internally and relaxes himself. He contemplates mind externally and contemplates mind internally and externally. He contemplates principles internally, contemplates principles externally, and contemplates principles internally and externally as he relaxes himself.
+4\. “How does one reflect on the four stations of mindfulness? Here, a monk contemplates his own body internally, turning away bad thoughts and having no grief. He contemplates his own body externally, turning away bad thoughts and having no grief. He contemplates his body internally and externally, turning away bad thoughts and having no grief. He contemplates feelings as feelings internally and relaxes himself. He contemplates feelings as feelings externally and contemplates feelings as feelings internally and externally. He contemplates his mind internally and relaxes himself. He contemplates mind externally and contemplates mind internally and externally. He contemplates principles internally … contemplates principles externally … contemplates principles internally and externally as he relaxes himself.
 {: #p4}
 
 #### Contemplation of Body
 
-5\. “How does a monk contemplate his body internally and relax himself? Here, a monk contemplates this body according to its nature and activity. From head to toe and from toe to head, he contemplates all the impurities in his body, none of which are desirable. Just as he observes this body with its hair, beard, nails, teeth, skin, flesh, sinews, bones, marrow, brain, fat, intestines, stomach, heart, liver, spleen, and kidneys, he observes and knows them all these related parts. He should observe and know its dung, urine, vomit, diarrhea, tears, spit, blood, grease, and bile, none of which are desirable.[\[2\]](#n2){:#ref2} Thus, monks, you should contemplate the body and relax yourselves, turning away bad thoughts and having no grief.
+5\. “How does a monk contemplate his body internally and relax himself? Here, a monk contemplates this body according to its nature and activity. From head to toe and from toe to head, he contemplates all the impurities in his body, none of which are desirable. Just as he observes this body with its hair, beard, nails, teeth, skin, flesh, sinews, bones, marrow, brain, fat, intestines, stomach, heart, liver, spleen, and kidneys, he observes and knows all these related parts. He should observe and know its dung, urine, vomit, diarrhea, tears, spit, blood, grease, and bile, none of which are desirable.[\[2\]](#n2){:#ref2} Thus, monks, you should contemplate the body and relax yourselves, turning away bad thoughts and having no grief.
 {: #p5}
 
 6\. “Furthermore, a monk returns to contemplating this body: ‘Does it possess the earth element or the elements of water, fire, and air?’ Thus, a monk contemplates this body.
 {: #p6}
 
-7\. “Furthermore, a monk contemplates this body by discerning its elements: ‘This body has four elements.’ Just like a butcher or a butcher’s apprentice cutting up a cow, he examines and sees for himself, ‘This is the leg. This is the heart. This is the joint. This is the head.’ Thus, that monk discerns these elements when he examines his body as having the elements of earth, water, fire, and air. Thus, a monk contemplates [568b] the body and relaxes himself.
+7\. “Furthermore, a monk contemplates this body by discerning its elements: ‘This body has four elements.’ Just like a butcher or a butcher’s apprentice cutting up a cow, he examines and sees for himself, ‘This is the leg. This is the heart. This is a joint. This is the head.’ Thus, that monk discerns these elements when he examines his body as having the elements of earth, water, fire, and air. Thus, a monk contemplates [568b] the body and relaxes himself.
 {: #p7}
 
 8\. “Furthermore, a monk contemplates this body as having orifices from which impurities flow. He’s like someone viewing a bamboo park or looking at a stand of reeds. Thus, the monk contemplates this body as having orifices from which impurities flow.
@@ -40,22 +42,22 @@ next: ../19/EA_19_01.html
 9\. “Furthermore, a monk contemplates a corpse that’s been dead for one night, two nights, three nights, four nights, five nights, six nights, or seven nights. The body is bloated, putrid, and impure. Again, he contemplates his own body as being no different from it: ‘My body will not escape this fate.’ Suppose, again, a monk contemplates a corpse that’s been pecked and eaten by crows and owls or that’s been eaten by animals like tigers, wolves, jackals, and insects. Again, he examines his own body as being no different from it: ‘My body will not be free of this fate.’ This is called a monk contemplating the body and relaxing himself.
 {: #p9}
 
-10\. “Furthermore, a monk contemplates a corpse. Perhaps it’s half eaten and scattered on the ground, putrid and impure. Again, he contemplates his own body as being no different from it: ‘My body will not be free of state.’
+10\. “Furthermore, a monk contemplates a corpse. Perhaps it’s half-eaten, scattered on the ground, putrid, and impure. Again, he contemplates his own body as being no different from it: ‘My body will not be free of this state.’
 {: #p10}
 
-11\. “Furthermore, he contemplates a corpse that’s only bones with its flesh gone and smeared with blood. Again, he contemplates this body and that body as having no difference from it. Thus, a monk contemplates this body.
+11\. “Furthermore, he contemplates a corpse that’s only bones with its flesh gone and smeared with blood. Again, he contemplates his body and that body as having no difference. Thus, a monk contemplates this body.
 {: #p11}
 
-12\. “Furthermore, a monk contemplates a corpse [that’s like] a bundle of wood wrapped in sinews. Again, he contemplates his own body and that as having no difference. Thus, a monk contemplates this body.
+12\. “Furthermore, a monk contemplates a corpse [that’s like] a bundle of wood wrapped in sinews. Again, he contemplates his own body and that as having no difference. Thus, a monk contemplates the body.
 {: #p12}
 
-13\. “Furthermore, a monk contemplates a corpse that has it’s bones and sinews separated and scattered in different places. Perhaps a hand bone and a leg bone are both in one place. Perhaps there’s a kneecap, a pelvic bone, a rump bone, an arm bone, a shoulder bone, a rib bone, a backbone, a neck bone, or a skull there. Again, he contemplates this body and that as having no difference: ‘I won’t escape this state; my body will also disintegrate.’ Thus, a monk contemplates the body and relaxes himself.
+13\. “Furthermore, a monk contemplates a corpse that has it’s bones and sinews separated and scattered in different places. Perhaps a hand bone and a leg bone are both in one place. Perhaps there’s a kneecap, a pelvis, a tail bone, an arm bone, a shoulder bone, a rib bone, a backbone, a neck bone, or a skull there. Again, he contemplates this body and that as having no difference: ‘I won’t escape this state; my body will also disintegrate.’ Thus, a monk contemplates the body and relaxes himself.
 {: #p13}
 
 14\. “Furthermore, a monk contemplates a corpse that’s white or white shell-colored. Again, he contemplates his own body and that as having no difference: ‘I’m won’t be free of this state.’ This is called a monk contemplating his own body.
 {: #p14}
 
-15\. “Furthermore, suppose a monk sees a corpse and perceives its bones and blueish contusions, none of which are desirable. Perhaps there’s ashes or dust that makes it all the same color and indiscernible. Thus, a monk contemplates his own body, turning away bad thoughts and having no grief: ‘This body is impermanent and will become something that’s scattering.’ Thus, a monk contemplates his body internally, contemplates his body externally, and understands it as being nothing at all.
+15\. “Furthermore, suppose a monk sees a corpse and perceives its bones and blueish contusions, none of which are desirable. Perhaps there’s ash or dust that makes it all the same color and indiscernible. Thus, a monk contemplates his own body, turning away bad thoughts and having no grief: ‘This body is impermanent and will become something that’s scattering.’ Thus, a monk contemplates his body internally, contemplates his body externally, and understands it as being nothing at all.
 {: #p15}
 
 #### Contemplation of Feeling
@@ -72,7 +74,7 @@ next: ../19/EA_19_01.html
 19\. “Furthermore, when a monk has a pleasant feeling, at that point he isn’t having a painful feeling. He’s then aware, ‘I’m experiencing a pleasant feeling.’ When he has a painful feeling, at that point he isn’t having a pleasant feeling. He’s then aware, ‘I’m experiencing a painful feeling.’ If he has a feeling that’s neither pleasant nor painful, at that point he isn’t having pain or pleasure. He’s aware, ‘I’m experiencing a feeling that’s neither pleasant nor painful.’
 {: #p19}
 
-20\. “As those states come together, he relaxes himself and also observes those states ending. Again, he contemplates [both] the coming together and ending of those states. Perhaps, again, he has a feeling that he can know and see directly in the present and reflect on its source. Without depending on anything, he relaxes himself and doesn’t produce worldly perceptions. In that regard, he still is not frightened. Not being frightened, then he attains nirvāṇa: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’
+20\. “As those states come together, he relaxes himself and also observes those states ending. Again, he contemplates [both] the coming together and ending of those states. Perhaps, again, he has a feeling that he can know and see directly in the present and reflect on its source. Without depending on anything, he relaxes himself and doesn’t produce worldly perceptions. He still is not frightened by this. Not being frightened, then he attains nirvāṇa: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and truly know it.’
 {: #p20}
 
 21\. “Thus, a monk contemplates his own feelings internally, turning away confused thoughts and having no grief. He contemplates his own feelings externally and contemplates feelings internally and externally, turning away confused thoughts and having no grief. Thus, a monk contemplates feelings internally and externally.
@@ -82,38 +84,40 @@ next: ../19/EA_19_01.html
 22\. “How does a monk contemplate mental states as mind and relax himself? Here, a monk has a mind with craving, and then he’s aware, ‘I have a mind with craving.’ He has a mind without craving, and he’s also aware, ‘I have a mind without craving.’ He has a mind with anger, and then he’s aware, ‘I have a mind with anger.’ He has a mind without anger, and he’s also aware, ‘I have a mind without anger.’ He has a mind with delusion, and then he’s aware, ‘I have a mind with delusion.’ He has a mind without delusion, and he’s also aware, ‘I have a mind without delusion.’
 {: #p22}
 
-23\. “He has a thought of craving, and he’s aware, ‘I have a thought of craving.’ He has a thought without craving, and he’s aware, ‘I have a thought without craving.’ Having a collected mind, he’s aware ‘I have a collected mind.’ Having an uncollected mind, he’s aware, ‘I have an uncollected mind.’ Having a confused mind, he’s aware, ‘I have a confused mind.’ Having an unconfused mind, he’s aware, ‘I have an unconfused mind.’ Having a distracted mind, he’s also aware, ‘I have a distracted mind.’ Having an undistracted mind, he’s aware, ‘I have an undistracted mind.’ Having a pervading mind, he’s aware, ‘I have a pervading mind.’ Having a mind that’s not pervading, he’s aware, ‘I have a mind that’s not pervading.’ Having a great mind, he’s aware, ‘I have a great mind.’ Without a great mind, he’s aware, ‘I’m without a great mind.’ Having a measureless mind, he’s aware, ‘I have a measureless mind.’ Without a measureless mind, he’s aware, ‘I’m without a measureless mind.’ Having a concentrated mind, he’s aware, ‘I have a concentrated mind.’ Without a concentrated mind, he’s aware, ‘I’m without a concentrated mind.’ With a mind yet to be liberated, he’s aware, ‘My mind has yet to be liberated.’ With a mind that has been liberated, he’s aware, ‘My mind has been liberated.’ Thus, a monk contemplates attributes of mind as a station of mindfulness.
+23\. “He has a thought of craving, and he’s aware, ‘I have a thought of craving.’ He has a thought without craving, and he’s aware, ‘I have a thought without craving.’ Having a collected mind, he’s aware, ‘I have a collected mind.’ Having an uncollected mind, he’s aware, ‘I have an uncollected mind.’ Having a confused mind, he’s aware, ‘I have a confused mind.’ Having an unconfused mind, he’s aware, ‘I have an unconfused mind.’ Having a distracted mind, he’s also aware, ‘I have a distracted mind.’ Having an undistracted mind, he’s aware, ‘I have an undistracted mind.’
+
+“Having a pervading mind, he’s aware, ‘I have a pervading mind.’ Having a mind that’s not pervading, he’s aware, ‘I have a mind that’s not pervading.’ Having a great mind, he’s aware, ‘I have a great mind.’ Without a great mind, he’s aware, ‘I’m without a great mind.’ Having a measureless mind, he’s aware, ‘I have a measureless mind.’ Without a measureless mind, he’s aware, ‘I’m without a measureless mind.’ Having a concentrated mind, he’s aware, ‘I have a concentrated mind.’ Without a concentrated mind, he’s aware, ‘I’m without a concentrated mind.’ With a mind yet to be liberated, he’s aware, ‘My mind has yet to be liberated.’ With a mind that has been liberated, he’s aware, ‘My mind has been liberated.’ Thus, a monk contemplates attributes of mind as a station of mindfulness.
 {: #p23}
 
-24\. “He contemplates those states coming together, contemplates those states ending, and contemplates [both] the coming together and ending of those states. He contemplates the states of reflection and relaxes himself. He depends on nothing that can be known, can be seen, can be considered, and can’t be considered, and he doesn’t produce worldly perceptions. Once he doesn’t produce worldly perceptions, then he has no fear. Once he has no fear, then nothing remains. Once nothing remains, then he [enters] nirvāṇa: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’
+24\. “He contemplates those states coming together, contemplates those states ending, and contemplates [both] the coming together and ending of those states. He contemplates the states of reflection and relaxes himself. He depends on nothing that can be known, can be seen, can be considered, and can’t be considered, and he doesn’t produce worldly perceptions. Once he doesn’t produce worldly perceptions, then he has no fear. Once he has no fear, then nothing remains. Once nothing remains, then he [enters] nirvāṇa: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and truly know it.’
 {: #p24}
 
 25\. “Thus is a monk’s station of mindfulness that contemplates mind as mind internally, turning away confused thoughts and having no grief. This is the station of mindfulness that contemplates mind externally and contemplates mind internally and externally. Thus, a monk contemplates mental attributes as mind as a station of mindfulness.
 
 #### Contemplation of Principles
 
-26\. “What is a monk’s station of mindfulness that contemplates the attributes of principles as principles? Here, a monk cultivates the awakening factor of mindfulness based on absence of desire and based on cessation to abandon bad qualities. He cultivates the awakening factor of qualities, cultivates the awakening factor of  effort, cultivates the awakening factor of joy, cultivates the awakening factor of calm, cultivates the awakening factor of concentration, and cultivates the awakening factor of equanimity based on contemplation, based absence of desire, and based on cessation to abandon bad qualities. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
+26\. “What is a monk’s station of mindfulness that contemplates the attributes of principles as principles? Here, a monk cultivates the awakening factor of mindfulness based on absence of desire and based on cessation and abandonment of bad qualities. He cultivates the awakening factor of qualities … cultivates the awakening factor of effort … cultivates the awakening factor of joy … cultivates the awakening factor of calm … cultivates the awakening factor of concentration … cultivates the awakening factor of equanimity based on contemplation, based absence of desire, and based on cessation and abandonment of bad qualities. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p26}
 
-27\. “Furthermore, a monk is liberated from craving and eliminates bad and unwholesome qualities. With perception, contemplation, and calm thoughts, he delights in the first meditation and relaxes himself. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
+27\. “Furthermore, a monk is liberated from craving and eliminates bad and unwholesome qualities. With perception, contemplation, and calm thoughts, he delights in the first dhyāna and relaxes himself. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p27}
 
-28\. “Furthermore, a monk abandons having perception and contemplation and gives rise to inner joy. He focuses his concentration and achieves the absence of perception and contemplation. Mindful, calm, joyous, and peaceful, he accomplishes the second meditation and relaxes himself. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
+28\. “Furthermore, a monk abandons having perception and contemplation and gives rise to inner joy. He focuses his concentration and achieves the absence of perception and contemplation. Mindful, calm, joyous, and peaceful, he accomplishes the second dhyāna and relaxes himself. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p28}
 
-29\. “Furthermore, a monk is detached from thought and cultivates equanimity. He’s constantly aware of his own personal happiness that’s sought by the noble ones, and his equanimity and mindfulness are pure as he practices the third meditation. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
+29\. “Furthermore, a monk is detached from thoughts and cultivates equanimity. He’s constantly aware of his own personal happiness as that which is sought by the noble ones, and he is equanimous, mindful, and pure as he practices the third dhyāna. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p29}
 
-30\. “Furthermore, a monk is detached from the mind of pleasure and pain. No longer sad or joyous and without pleasure or pain, his equanimity and mindfulness are pure as he delights in the fourth meditation. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
+30\. “Furthermore, a monk is detached from the mental states of pleasure and pain. No longer sad or joyous and without pleasure or pain, he is equanimous, mindfulness, and pure as he delights in the fourth dhyāna. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p30}
 
-31\. “As the states of those practices come together, end, and both come together and end, he relaxes himself. He then attains the station of mindfulness regarding principles directly in the present. He can know and see, and he turns away from confused perceptions. He doesn’t depend on anything and doesn’t produce worldly perceptions. After he doesn’t produce perceptions, then he has no fear. After he has no fear, then [he knows]: ‘Birth has been ended, the religious practice is established, and the task is accomplished. I’m no longer subject to existence and know it as it really is.’
+31\. “As the states of those practices come together, end, and both come together and end, he relaxes himself. He then attains the station of mindfulness that regards principles directly in the present. He can know and see them, and he turns away from confused perceptions. He doesn’t depend on anything and doesn’t produce worldly perceptions. Not producing perceptions, then he has no fear. Not having fear, then [he knows]: ‘Birth has been ended, the religious practice is established, and the task is accomplished. I’m no longer subject to existence and truly know it.’
 {: #p31}
 
-32\. “Monks, relying on this one entry to the path, sentient beings attain purification, part with grief, and no longer have perceptions of joy. They then obtain wisdom and realization of nirvāṇa. That is, they cease the five hindrances and cultivate the four stations of mindfulness.”
+32\. “Monks, relying on this one entry to the path, sentient beings attain purification, part with grief, and no longer delight in perceptions. They then obtain wisdom and realize nirvāṇa. That is, they cease the five hindrances and cultivate the four stations of mindfulness.”
 {: #p32}
 
-33\. The monks who heard what the Buddha taught then rejoiced and handed it down.
+33\. The monks who heard what the Buddha taught then rejoiced and approved.
 {: #p33}
 
 ### Notes
@@ -125,7 +129,7 @@ next: ../19/EA_19_01.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 August 2020
+Last Revised: 7 July 2021
 {: .revised}
 
 ---
