--- a/01_agama/ekottarika/27/EA_27_06.md
+++ b/01_agama/ekottarika/27/EA_27_06.md
@@ -17,7 +17,7 @@ next: ../31/EA_31_08.html
 2\. It was then that the Bhagavān addressed the monks, “The Tathāgata has arisen in the world with four kinds of fearlessness. The Tathāgata attains these four kinds of fearlessness, has no attachments to the world, roars the lion’s roar amid a great assembly, and turns the Brahma wheel.
 {: #p2}
 
-3\. “What are the four? [645c] Now, I have discerned this teaching. Even if ascetics, priests, Māra, the gods of Māra, or any flying or crawling creatures were amid the great assembly and said that I didn’t achieve this teaching, it would be untrue. I’ve attained this kind of fearlessness in that regard. This is the first kind of fearlessness.
+3\. “What are the four? [645c] Now, I have discerned this teaching. Even if ascetics, priests, Māra, the gods of Māra, or any other flying or crawling creatures were amid the great assembly and said that I didn’t achieve this teaching, it would be untrue. I’ve attained this kind of fearlessness in that regard. This is the first kind of fearlessness.
 {: #p3}
 
 4\. “Similarly, I’ve today ended the contaminants, so I’m not subject to the womb. If there were ascetics, priests, or other kinds of sentient beings amid the large assembly that said I have yet to end the contaminants, it would be untrue. This is the second kind of fearlessness.
@@ -26,7 +26,7 @@ next: ../31/EA_31_08.html
 5\. “Now, I’ve become free of foolish and dark teachings or the desire to go back to foolish and dark teachings. That’ll never be possible. If there were ascetics, priests, Māra, gods of Māra, or other kinds of sentient beings amid the great assembly that said I will return to a foolish and dark teaching, this would be untrue. This is the third kind of fearlessness.
 {: #p5}
 
-6\. “The noble teaching of escape reaches the limit of suffering. For someone to employ it and not escape would never be possible. If there were ascetics, priests, Māra, gods of Māra, or other kinds of sentient beings amid the great assembly that said the Tathāgata hasn’t reached the limit of suffering, it would be untrue. This is the Tathāgata’s fourth kind of fearlessness.
+6\. “The noble teaching of escape reaches the end of suffering. It’ll never be possible for someone to employ it and not escape. If there were ascetics, priests, Māra, gods of Māra, or other kinds of sentient beings amid the great assembly that said the Tathāgata hasn’t reached the end of suffering, it would be untrue. This is the Tathāgata’s fourth kind of fearlessness.
 {: #p6}
 
 7\. “Thus, monks, are the Tathāgata’s four kinds of fearlessness. Amid the great assembly, he roars the lion’s roar and turns the Brahma wheel. Thus, monks, should you seek the methods to achieve these four kinds of fearlessness. Thus, monks, should you train.”
@@ -42,7 +42,7 @@ next: ../31/EA_31_08.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 31 October 2020
+Last Revised: 7 July 2021
 {: .revised}
 
 ---
