--- a/01_agama/ekottarika/19/EA_19_01.md
+++ b/01_agama/ekottarika/19/EA_19_01.md
@@ -13,15 +13,19 @@ next: EA_19_02.html
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was under the bodhi tree in Magadha.
 {: #p1}
-2\. Soon after he had attained enlightenment, the Bhagavān had this thought: “Now, my teaching is profound, hard to understand, hard to comprehend, and hardly recognizable. It’s inconceivable, at rest, and subtle. It’s recognized by wise people who can discern its purpose and principle. Training untiringly, they then will become joyous. Supposing I were to explain this wonderful teaching to people, some of them wouldn’t believe it and wouldn’t approve of it.  It would be a waste, it’d be troublesome, and it’d be for nothing. Quietude is what would be fitting for me now. What need is there to explain this teaching?”
+
+2\. Soon after he had attained enlightenment, the Bhagavān had this thought: “Now, my teaching is profound, hard to understand, hard to comprehend, and hard to recognize. It’s inconceivable, at rest, and subtle. It’s recognized by wise people who can discern its purpose and principle. Training untiringly, they then will become joyous. Supposing I were to explain this wonderful teaching to people, some of them wouldn’t believe it and wouldn’t approve of it.  It would be a waste, it’d be troublesome, and it’d be for nothing. Quietude would be fitting for me now. What need is there to explain this teaching?”
 {: #p2}
+
 3\. It was then that the god Brahmā up in the Brahma Heaven knew the Tathāgata’s thought from a distance. In the time it takes a man to flex his arm, he disappeared from the Brahma Heaven and came to the Bhagavān. He bowed his head at his feet and stood to one side.
 {: #p3}
+
 4\. Brahmā then said to the Bhagavān, “Here, Jambudvīpa is sure to be destroyed, and the triple realm will lose its eyes! The Tathāgata, Arhat, and Completely and Rightly Awakened One has arisen in the world. He ought to proclaim the jewel of the teaching, yet he still hasn’t uttered the teaching’s essence. May the Tathāgata widely explain the profound teaching to all sentient beings!
 {: #p4}
-5\. “Moreover, these sentient beings at root are easily liberated. If they don’t hear it, they’ll forever miss out on the Dharma vision. This is a teaching that should have disciples to inherit it. They’re like the blue, red, or white lotus flowers that emerge from mud but haven’t risen above the water and bloomed yet. Those flowers slowly grow while they’re under the water. Some of them emerge from the water, and some of those have no water clinging to them [after they emerge]. This type of sentient being is likewise. They are harassed by birth, old age, illness, and death, and their faculties ripen as a result. If they don’t hear the teaching, they’ll still die, but their suffering won’t. Now is the right time. Please explain the teaching for them, Bhagavān!”
+
+5\. “Moreover, these sentient beings are easily liberated at their root. If they don’t hear it, they’ll forever miss out on the Dharma eye. This is a teaching that should have disciples to inherit it. They’re like the blue, red, or white lotus flowers that emerge from mud but haven’t risen above the water and bloomed yet. Those flowers slowly grow while they’re under the water. Some of them emerge from the water, and some of them have no water clinging to them [after they emerge]. This type of sentient being is likewise. They are harassed by birth, old age, illness, and death, and their faculties ripen as a result. If they don’t hear the teaching, they’ll still die, but their suffering won’t. Now is the right time. Please explain the teaching for them, Bhagavān!”
 {: #p5}
-6\. Because he knew the thoughts in Brahmā’s mind and out of compassion for all sentient beings, the Bhagavān then spoke these verses:
+6\. Because he knew the thoughts in Brahmā’s mind and had compassion for all sentient beings, the Bhagavān then spoke these verses:
 {: #p6}
 
 * {:.verse}“Now, Brahmā has come encouraging\\
@@ -31,22 +35,22 @@ Will discern the profound teaching’s meaning.’
 * {:.verse}Like standing atop a high mountain,\\
 I see all kinds of sentient beings.\\
 Now that I possess this teaching,\\
-I’ll ascend the hall and reveal the Dharma vision.”
+I’ll ascend to the hall and reveal the Dharma eye.”
 
 7\. Brahmā then thought: “Surely the Tathāgata will explain the profound teaching for sentient beings!” He rejoiced and celebrated, unable to control himself. He bowed his head at the Buddha’s feet and went back up to his heaven.
 {:#p7}
 
-8\. When Brahmā heard what the Buddha taught, he rejoiced and approved.
+8\. When Brahmā heard what the Buddha taught, he then rejoiced and approved.
 {:#p8}
 
 ### Notes
-1. {:#n1} This sūtra is parallel with SN 6.1. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 6.1](https://suttacentral.net/sn6.1/en/sujato). [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 18 September 2020
+Last Revised: 7 July 2021
 {: .revised}
 
 ---
