--- a/01_agama/ekottarika/19/EA_19_02.md
+++ b/01_agama/ekottarika/19/EA_19_02.md
@@ -13,15 +13,19 @@ next: ../24/EA_24_5.html
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.
 {: #p1}
-2\. It was then that the Bhagavān addressed the monks, “There are these two things that someone training on the path should not go near. What are these two things? They refer to attachment to [1] desire, pleasurable things, and things that are mean, common, and base and [2] all the many forms of hardship and mortification. These are called the two things that someone training on the path should not go near.
+
+2\. It was then that the Bhagavān addressed the monks, “There are these two things that someone training on the path should not go near. What are these two things? They are attachment to [1] desire, pleasurable things, and things that are inferior, common, and base and [2] all the many forms of hardship and mortification. These are called the two things that someone training on the path should not go near.
 {: #p2}
+
 3\. “Thus, after abandoning these two things, I myself possessed the essential path to achieving right awakening. Vision and knowledge arose, and my mind became still. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at nirvāṇa.
 {: #p3}
+
 4\. “What is that essential path that achieves right awakening, gives rise to vision and knowledge, stills the mind, attains the penetrating knowledges and fruits of the ascetic, and arrives at nirvāṇa? It’s this noble eightfold path, which is right view, right governance, right speech, right action, right livelihood, right method, right mindfulness, and right concentration. This is called the essential path.
 {: #p4}
+
 5\. “Now, I’ve achieved right awakening. Vision and knowledge arose, and my mind became still. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at nirvāṇa. Thus, monks, you should train by abandoning the above two things and practicing the essential path. Thus, monks, should you train.”
 {: #p5}
-6\. The monks who heard what the Buddha taught then rejoiced and handed it down.
+6\. The monks who heard what the Buddha taught then rejoiced and approved.
 {: #p6}
 
 ### Notes
@@ -31,7 +35,7 @@ next: ../24/EA_24_5.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 25 August 2020
+Last Revised: 7 July 2021
 {: .revised}
 
 ---
