--- a/01_agama/ekottarika/24/EA_24_6.md
+++ b/01_agama/ekottarika/24/EA_24_6.md
@@ -19,29 +19,29 @@ next: ../../../01_agama/ekottarika/27/EA_27_06.html
 
 #### The Eighth Day Sabbath
 
-3\. “Monks, you should know, sometimes on the eighth day sabbath, the four god kings send out officials who survey the world: ‘Who is doing good and doing evil? Which sentient beings have kindness and piety towards their parents, ascetics, priests, and elders? Are these sentient beings delighted by generosity, cultivating precepts, tolerance, effort, concentration, preaching the meaning of sūtras, and keeping the eight sabbath observances?’ They discern these things.
+3\. “Monks, you should know, sometimes on the eighth day sabbath, the four god kings send out officials who survey the world: ‘Who is doing good, and who is doing evil? Which sentient beings have kindness and piety towards their parents, ascetics, priests, and elders? Are these sentient beings delighted by generosity, cultivating precepts, tolerance, effort, concentration, preaching the meaning of sūtras, and keeping the eight sabbath observances?’ They discern these things.
 {:#p3}
 
 4\. “If there aren’t sentient beings who are pious to their parents, ascetics, priests, and elders, then the officials tell the four god kings: ‘Presently, the world doesn’t have any sentient beings who are pious to their parents, ascetics, or priests, who practice the four immeasurable mental states, or who have compassion for sentient beings.’
 {:#p4}
 
-5\. “After hearing this, the four god kings feel distraught, grieved, and displeased. They then go up to the Trāyastriṃśa Heaven for a meeting in the Sudharma Meeting Hall. Due to these circumstances, they together tell Lord Śakra, ‘Lord of Gods, you should know, the present world doesn’t have any sentient beings that are pious to their parents, ascetics, priests, or elders.’
+5\. “After hearing this, the four god kings feel distraught, grieved, and displeased. They then go up to the Trāyastriṃśa Heaven for a meeting in the Sudharma Meeting Hall. Due to these circumstances, they together tell Lord Śakra, ‘Lord of Gods, you should know, the present world doesn’t have any sentient beings who are pious to their parents, ascetics, priests, or elders.’
 {:#p5}
 
-6\. “After hearing this, the Lord of Gods and the thirty-three gods are distraught, grieved, and displeased that the host of gods will diminish, and the host of asuras will grow.
+6\. “After hearing this, the Lord of Gods and the Trayastriṃśa gods are distraught, grieved, and displeased that the host of gods will diminish, and the host of asuras will grow.
 {:#p6}
 
-7\. “Suppose it happens that the world’s sentient beings are pious to their parent, ascetics, priests, and elders, keep the eight sabbath observances, cultivate virtue purely, don’t violate the precepts and rules, and great [in number] like hair. The officials then rejoice and celebrate, unable to control themselves. They go to the four kings and say, ‘Presently, the world has many sentient beings who are pious to their parents, ascetics, priests, and elders!’
+7\. “Suppose it happens that the world’s sentient beings who are pious to their parents, ascetics, priests, and elders, keep the eight sabbath observances, cultivate virtue purely, don’t violate the precepts and rules are great [in their number] like hairs. The officials then rejoice and celebrate, unable to control themselves. They go to the four god kings and say, ‘Presently, the world has many sentient beings who are pious to their parents, ascetics, priests, and elders!’
 {:#p7}
 
 8\. “After hearing this, the god kings feel quite delighted, and they go to Śakra the Lord of Gods. Due to these circumstances, they tell Lord Śakra, “Lord of Gods, you should know that presently the world has many sentient beings who are pious to their parents, ascetics, priests, and elders.’
 {:#p8}
 
-9\. “Lord Śakra and thirty-three gods then rejoice and can’t control themselves, for the host of gods will increase, and the host of asuras will diminish. The tortures of hell naturally stop, and harmfulness isn’t practiced.
+9\. “Lord Śakra and Trayastriṃśa gods then rejoice and can’t control themselves, for the host of gods will increase, and the host of asuras will diminish. The tortures of hell will naturally stop, and harmfulness won’t be practiced.
 
 #### The Fourteenth Day Sabbath
 
-10\. “On the fourteenth day sabbath, they send down a prince to survey the world and investigate the people: ‘Do they undertake good or evil? Are there sentient beings who believe the Buddha, Dharma, and Saṅgha of monks? Are they pious to their parents, ascetics, priests, and elders? Are there sentient beings who are delighted by generosity, keeping the eight sabbath observances, shut off the six senses, and strictly controlling the five desires?’
+10\. “On the fourteenth day sabbath, they send down a prince to survey the world and investigate the people: ‘Do they undertake good or evil? Are there sentient beings who believe the Buddha, Dharma, and Saṅgha of monks? Are they pious to their parents, ascetics, priests, and elders? Are there sentient beings who are delighted by generosity, keeping the eight sabbath observances, shutting off the six senses, and strictly controlling the five desires?’
 {:#p10}
 
 11\. “If there aren’t sentient beings who cultivate these five teachings or who’re pious to their parents, ascetics, priests, and elders, then the prince tells the four god kings …
@@ -50,16 +50,16 @@ next: ../../../01_agama/ekottarika/27/EA_27_06.html
 12\. “After hearing this, the four god kings feel distraught, grieved, and displeased. They then go to Śakra the Lord of Gods. Due to these circumstances, they together tell the Lord of Gods, ‘Great king, you should know, the present world doesn’t have any sentient beings that are pious to their parents, ascetics, priests, or elders.’
 {:#p12}
 
-13\. “The Lord of Gods and the thirty-three gods then are distraught, grieved, and displeased that the host of gods will diminish, and the host of asuras will increase.
+13\. “The Lord of Gods and the Trayastriṃśa gods then are distraught, grieved, and displeased that the host of gods will diminish, and the host of asuras will increase.
 {:#p13}
 
-14\. “If it happens that the world’s sentient beings are pious to their parent, ascetics, priests, and elders and keep the eight sabbath observances, then the prince rejoices and celebrates, being unable to control himself. He goes to the four kings and says, ‘Presently, the world has many sentient beings who are pious to their parents, ascetics, priests, and elders.’
+14\. “If it happens that the world’s sentient beings are pious to their parents, ascetics, priests, and elders and keep the eight sabbath observances, then the prince rejoices and celebrates, being unable to control himself. He goes to the four god kings and says, ‘Presently, the world has many sentient beings who are pious to their parents, ascetics, priests, and elders.’
 {:#p14}
 
 15\. “After hearing this, the four god kings feel quite delighted, and they go to Śakra the Lord of Gods. Due to these circumstances, they tell the Lord of Gods, ‘Noble king, you should know that presently the world has many sentient beings who are pious to their parents, ascetics, priests, and elders. They take the triple refuge, are kind-hearted, admonishing, sincere, and not deceptive.’
 {:#p15}
 
-16\. “The Lord of Gods and thirty-three gods then rejoice, unable to control themselves, for the host of gods will increase, and the host of asuras will diminish.
+16\. “The Lord of Gods and Trayastriṃśa gods then rejoice, unable to control themselves, for the host of gods will increase, and the host of asuras will diminish.
 {:#p16}
 
 #### The Fifteenth Day Sabbath
@@ -70,13 +70,13 @@ next: ../../../01_agama/ekottarika/27/EA_27_06.html
 18\. “If there aren’t sentient beings who are pious to their parents, ascetics, priests, and elders, then the four god kings feel distraught, grieved, and displeased. They go to the Lord Śakra and due to these circumstances say: ‘Great king, you should know that the present world doesn’t have any sentient beings who are pious to their parents, ascetics, priests, and elders.’
 {:#p18}
 
-19\. “Śakra the Lord of Gods and the thirty-three gods are then distraught, grieved, and displeased that the host of gods will diminish, and the host of asuras will increase.
+19\. “Śakra the Lord of Gods and the Trayastriṃśa gods are then distraught, grieved, and displeased that the host of gods will diminish, and the host of asuras will increase.
 {:#p19}
 
 20\. “If it happens that the world’s sentient beings are pious to their parent, ascetics, priests, and elders and keep the eight sabbath observances, then the four god kings rejoice and celebrate, unable to control themselves. They go to the Lord Śakra and due to these circumstances say, ‘Great king, you should know, the present world has many sentient beings who are pious to their parents, ascetics, priests, and elders.’
 {:#p20}
 
-21\. “Śakra the Lord of Gods, thirty-three gods, and the four god kings then rejoice and celebrate, unable to control themselves, for the host of gods will grow, and the host of asuras will diminish.”
+21\. “Śakra the Lord of Gods, Trayastriṃśa gods, and the four god kings then rejoice and celebrate, unable to control themselves, for the host of gods will increase, and the host of asuras will diminish.”
 {:#p21}
 
 #### The Eight Sabbath Observances
@@ -86,13 +86,13 @@ next: ../../../01_agama/ekottarika/27/EA_27_06.html
 
 The monks then said to the Bhagavān, “The Tathāgata is the Dharma king and the seal of teachings. Please let the Bhagavān proclaim this doctrine for the monks. After hearing it, they’ll approve of it.”
 
-23\. The Bhagavān told them, “Listen closely, listen closely! Consider it well, for I will give you a discerning teaching. Here, monks, good men or good women keep the sabbath when the precepts are recited on the eighth, fourteenth, and fifteenth days of the month. Going to the four-division assembly, and they should say, ‘On this sabbath day, I would like to keep the eight sabbath observances. Please, venerables, explain them explanation for me.’
+23\. The Bhagavān told them, “Listen closely, listen closely! Consider it well, for I will give you a discerning teaching. Here, monks, good men or good women keep the sabbath when the precepts are recited on the eighth, fourteenth, and fifteenth days of the month. Going to the four-division assembly, and they should say, ‘On this sabbath day, I would like to keep the eight sabbath observances. Please, Venerables, explain them for me.’
 {:#p23}
 
 24\. “The four-division assembly then should teach them the eight sabbath observances. They first instruct them by saying this, ‘Good son, you should state your name.’ Once the layperson states their name, then they should give them an explanation of the eight sabbath observances.
 {:#p24}
 
-25\. “The instructor then teaches the layperson that’s before them to say: ‘I now respectfully accept the Tathāgata’s sabbath. Until sunrise tomorrow, I will cultivate the pure precepts and abandon bad qualities. If my physical conduct is bad actions, what comes out of my mouth is bad speech, or my mind has bad thoughts, the three physical, four verbal, and three mental bad actions having been done will be done. It might be something performed because of craving, performed because of dislike, performed because of delusion, performed because of familial influence, or performed because of the influence of bad friends. It might be in the present body, a later body, or countless bodies. It might be possible because I don’t know the Buddha or the Dharma. It might be possible because of conflict with the saṅgha of monks. It might be possible to kill parents, venerable teachers, and elders, but now I repent of these deeds, and I won’t keep them secret. Depending on the precepts and the Dharma, I’ll achieve the practice of those precepts. I accept the eight observances of the Tathāgata’s sabbath.”
+25\. “The instructor then teaches the layperson that’s before them to say: ‘I now respectfully accept the Tathāgata’s sabbath. Until sunrise tomorrow, I will cultivate the pure precepts and abandon bad qualities. If my physical conduct is bad, what comes out of my mouth is bad speech, or my mind has bad thoughts, the three physical, four verbal, and three mental bad actions that have been done will be done, too. It might be something done because of craving, done because of dislike, done because of delusion, done because of familial influence, or done because of the influence of bad friends. It might be in the present body, a later body, or countless bodies. It might be possible because I don’t know the Buddha or the Dharma. It might be possible because of a saṅgha of monks in conflict. It might be possible to kill parents, venerable teachers, and elders, but now I repent of these deeds, and I won’t keep them secret. Depending on the precepts and the Dharma, I’ll achieve the practice of those precepts. I accept the eight observances of the Tathāgata’s sabbath.”
 {:#p25}
 
 26\. “What are the eight sabbath observances? Not killing any form of life, having no harmful thoughts, and having kind thoughts towards sentient beings. ‘Now, I, so-and-so, will keep this sabbath observance until the next sunrise tomorrow: I will not kill, have no harmful thoughts, and have kind thoughts towards all sentient beings.’
@@ -101,66 +101,66 @@ The monks then said to the Bhagavān, “The Tathāgata is the Dharma king and t
 27\. “‘Arhats don’t have wrong thoughts, don’t steal, and they’re delighted with generosity during their whole life. Now, I, so-and-so, for my whole life won’t steal. From now until the next sunrise, I’ll keep this thought.
 {:#p27}
 
-28\. “‘Like the arhats, I won’t engage in sex, won’t wrong thoughts, always cultivate the religious life, and keep myself smelling pleasantly for my whole life. Today, I’ll keep the precept of celibacy and won’t think of my wife, nor will I think of other women until the next sunrise, without any violating contact.
+28\. “‘Like the arhats, I won’t engage in sex, won’t have wrong thoughts, always cultivate the religious life, and keep myself smelling pleasantly for my whole life. Today, I’ll keep the precept of celibacy and won’t think of my wife, nor will I think of other women until the next sunrise, without any violating contact.
 {:#p28}
 
-29\. “Arhats don’t speak falsely, always know utmost honesty, and doesn’t deceive people during their whole life. From today until the next sunrise, I won’t speak falsely. I myself won’t again speak falsely of the present, past, or future.
+29\. “Arhats don’t speak falsely, always know utmost honesty, and don’t deceive people during their whole life. From today until the next sunrise, I won’t speak falsely. I myself won’t again speak falsely of the present, past, or future.
 {:#p29}
 
 30\. “Like arhats who don’t drink alcohol, have unconfused minds, and keep the Buddha’s rules and precepts without any transgressions, I will now be likewise. From today until the next sunrise, I won’t again drink alcohol and keep the Buddha’s precepts without any violations.
 {:#p30}
 
-31\. [625c] “The arhats who don’t break the sabbath observance of always eating at the proper time, are satisfied with a small meal, and aren’t attached to its taste during their whole life. Now, I will likewise not break the sabbath observance of always eating at the proper time, being satisfied with a small meal, and not being attached to its taste from today until tomorrow morning.
+31\. [625c] “The arhats don’t break the sabbath observance of always eating at the proper time, are satisfied with a small meal, and aren’t attached to its taste during their whole life. Now, I will likewise not break the sabbath observance of always eating at the proper time, being satisfied with a small meal, and not being attached to its taste from today until tomorrow morning.
 {:#p31}
 
 32\. “Arhats never sit on high and wide seats, which means high and wide seats, seats made of gold, silver, ivory, or horn, buddha seats, pratyeka-buddha seats, arhat seats, or seats for venerable teachers. During this time, arhats don’t sit on these eight types of seats, and I won’t violate it by sitting on them, either.
 {:#p32}
 
-33\. “Arhats aren’t attached to fragrant flowers or cosmetics to adorn themselves. I now will likewise not be attached to the beauty of fragrant flowers and cosmetics for my whole life.
+33\. “Arhats aren’t attached to adorning themselves with fragrant flowers or cosmetics. I now will likewise not be attached to the beauty of fragrant flowers and cosmetics for my whole life.
 {:#p33}
 
-34\. “Now, I so-and-so will part with these eight things and respectfully keep the eight sabbath observances to not fall into the three bad destinations. I’ll keep this virtue and not enter the eight difficulties in hell or among hungry ghosts and animals. I’ll always find good friends and not be with bad friends as a result of doing this. I’ll always attain birth to beautiful parents and families. I won’t be born in remote regions that lack Buddhas and their teaching. I won’t be born among long-lived gods above. I won’t be a slave among humans. I won’t become Brahmā or Śakra, nor will I become a wheel-turning noble king. I’ll always be born in the presence of a Buddha; I will see a Buddha myself, hear the teaching myself, and employ it so my faculties aren’t confused. If I vow to practice the three vehicles, I’ll quickly achieve the fruits of the path.’
+34\. “Now, I so-and-so will part with these eight things and respectfully keep the eight sabbath observances to not fall into the three bad destinations. I’ll keep this virtue and not enter the eight difficulties in hell or among hungry ghosts and animals. I’ll always find good friends and not be with bad friends as a result of doing this. I’ll always attain birth to beautiful parents and families. I won’t be born in remote regions that lack Buddhas and their teachings. I won’t be born among long-lived gods above. I won’t be a slave among humans. I won’t become Brahmā or Śakra, nor will I become a wheel-turning noble king. I’ll always be born in the presence of a Buddha; I will see a Buddha myself, hear the teaching myself, and employ it so my faculties aren’t confused. If I vow to practice the three vehicles, I’ll quickly achieve the fruits of the path.’
 {:#p34}
 
-35\. “Monks, you should know, if there are laymen and laywomen who keep the eight sabbath observances, those good men and good women will be headed down the three paths, being born among humans, up in heaven, or to Parinirvāṇa.”
+35\. “Monks, you should know, if there are laymen and laywomen who keep the eight sabbath observances, those good men and good women will be headed down the three paths of being born among humans, up in heaven, or to Parinirvāṇa.”
 {:#p35}
 
 36\. The Bhagavān then spoke these verses:
 {:#p36}
 
-* {:.verse}“Not killing and not stealing,\\
-Not having sex and not speaking falsely,\\
-Avoiding alcohol and staying away from flowers,\\
-And attachment to taste violates the observances.
+* {:.verse}“Don’t kill and don’t steal,\\
+Don’t have sex and don’t speak falsely,\\
+Avoid alcohol and stay away from flowers,\\
+And attachment to flavors violates the observances.
 
 * {:.verse}Singing songs and performing dances,\\
-The trainee abandons them like arhats.\\
+The trainee abandons them like arhats do.\\
 Now, keep the eight observances,\\
-Not forgetting them day or night.
+Not forgetting them, day and night.
 
 * {:.verse}Don’t have the pains of birth and death,\\
-Don’t have a lifetime’s journeying.\\
+Don’t spend a lifetime wandering.\\
 Don’t accompany affections,\\
 Nor associate with enmities.
 
-* {:.verse}Aspire to destroy the pain of the five aggregates\\
+* {:.verse}Destroy the pain of the five aggregates\\
 And the painful vexations of birth and death;\\
 Nirvāṇa has none of these dangers:\\
-Now, I take refuge there.
+‘I now take refuge there.’
 
-37\. “Therefore, monks, if there are good men and good women who wish to keep the eight sabbath observances and part with suffering, who wish to attain a good abode, and who wish to attain the end of contaminants and enter the city of Nirvāṇa, they should seek the methods to achieve these eight sabbath observances. Why is that? Among humans, the splendid state isn’t enough to be valued, for the delights up in heaven are unimaginable. If good men and good women want to seek the unsurpassed merit, they should seek the methods to achieve these sabbath rules.
+37\. “Therefore, monks, if there are good men and good women who wish to keep the eight sabbath observances and part with suffering, who wish to attain a good abode, and who wish to attain the end of contaminants and enter the city of Nirvāṇa, they should seek the methods that achieve these eight sabbath observances. Why is that? Among humans, the splendid state isn’t enough to be valued, for the delights up in heaven are unimaginable. If good men and good women want to seek the unsurpassed merit, they should seek the methods that achieve these sabbath rules.
 {:#p37}
 
-38\. “Now, I’ll again admonish you: If there are good men and good women who achieve the eight sabbath observances, and they want to be born among the four god kings, they will win their aspiration. A precept-keeper obtains that to which they aspire. It’s because of this that I just teach this aim. Among humans, the splendid state is not enough to be valued. If good men or good women observe these eight sabbath observances, they’ll be born to a good abode up in heaven when their bodies break up and their lives end. They’ll also be born in Yama’s Heaven, the Tuṣita Heaven, the Nirmāṇarati Heaven, and the Paranirmitavaśavartin Heaven. It’ll never be for naught. Why is that? Those who keep the precepts obtain that to which they aspire.
+38\. “Now, I’ll again admonish you: If there are good men and good women who achieve the eight sabbath observances, and they want to be born among the four god kings, they will get that aspiration. A precept-keeper obtains that to which they aspire. It’s because of this that I just teach this aim. Among humans, the splendid state is not enough to be valued. If good men or good women observe these eight sabbath observances, they’ll be born to a good abode up in heaven when their bodies break up and their lives end. They’ll also be born in Yama’s Heaven, the Tuṣita Heaven, the Nirmāṇarati Heaven, and the Paranirmitavaśavartin Heaven. It’ll never be for naught. Why is that? Those who keep the precepts obtain that to which they aspire.
 {:#p38}
 
 39\. “Monks, now I’ll again admonish you: If there are good men and good women who keep the eight sabbath observances and want to be born in the desire heavens or the form heavens, they will achieve this aspiration. Why is that? Those who keep the precepts obtain that to which they aspire. If, again, good men and good women keep the eight sabbath observances and want to be born in the formless heavens, they’ll also be rewarded with that aspiration.
 {:#p39}
 
-40\. “Monks, you should know, if good men and good women keep the eight sabbath observances and want to be born to the four clans, they’ll also obtain that birth. Further, good men and good women who keep the eight sabbath observances and want to become a lesser god of one direction, two directions, three directions, or a lesser god of four directions, they’ll also win their aspiration. Why is that? If they want to become a wheel-turning noble king, they’ll also be granted their wish. Why is that? Those who keep the precepts obtain their aspirations. If good men and good women want to seek the disciple, pratyeka-buddha, or Buddha vehicles, they will achieve their aspiration. Now, I became a buddha as a result of keeping the precepts, meaning the five precepts and the ten virtues. There’s no aspiration that won’t be granted. Monks, if someone wants to achieve their path, they should train in this way.”
+40\. “Monks, you should know, if good men and good women keep the eight sabbath observances and want to be born to the four clans, they’ll also obtain that birth. Further, good men and good women who keep the eight sabbath observances and want to become a lesser god of one direction, two directions, three directions, or a lesser god of four directions, they’ll also win their aspiration. Why is that? If they want to become a wheel-turning noble king, they’ll also be granted their wish. Why is that? Those who keep the precepts obtain their aspirations. If good men and good women want to seek the disciple, pratyeka-buddha, or Buddha vehicles, they will achieve their aspiration. Now, I became a Buddha as a result of keeping the precepts, meaning the five precepts and the ten virtues. There’s no aspiration that won’t be granted. Monks, if someone wants to achieve their path, they should train in this way.”
 {:#p40}
 
-41\. The monks who heard what the Buddha taught rejoiced and approved.
+41\. The monks who heard what the Buddha taught then rejoiced and approved.
 {:#p41}
 
 ### Notes
@@ -170,7 +170,7 @@ Now, I take refuge there.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 December 2020
+Last Revised: 7 July 2021
 {: .revised}
 
 ---
