--- a/01_agama/ekottarika/43/EA_43_5.md
+++ b/01_agama/ekottarika/43/EA_43_5.md
@@ -17,10 +17,10 @@ next: EA_43_07.html
 2\. It was then that the Bhagavān addressed the monks, “Now, I will explain [760a] the parable of the raft. All of you, well consider and keep it in mind.”
 {: #p2}
 
-3\. The monks replied, “So it is, Bhagavān!” The monks then accepting instruction from the Buddha.
+3\. The monks replied, “Yes, Bhagavān!” The monks then accepted the instruction from the Buddha.
 {: #p3}
 
-4\. The Bhagavān told them, “What’s the parable of the raft? If you’re traveling on a road and get captured by bandits, you must get hold of your mind and thoughts without producing bad feelings. You must produce kindness, compassion, joy,  and equanimity that encompasses everything in all directions, that’s measureless, limitless, and indescribable. Maintain your mind as though it were the earth. Like the earth, accept what’s pure and what’s impure. Whether it’s feces, urine, trash, or ugliness, it accepts everything, and the earth doesn’t produce an uplifted or lowered mind. It doesn’t say, ‘This is lovely,’ or ‘This is terrible.’
+4\. The Bhagavān told them, “What’s the parable of the raft? If you’re traveling on a road and get captured by bandits, you must get hold of your mind and thoughts without producing bad feelings. You must produce kindness, compassion, joy, and equanimity that encompasses everything in all directions and that’s measureless, limitless, and indescribable. Maintain your mind as though it were the earth. Like the earth, accept what’s pure and what’s impure. Whether it’s feces, urine, trash, or ugliness, it accepts everything, and the earth doesn’t produce an uplifted or lowered mind. It doesn’t say, ‘This is lovely,’ or ‘this is terrible.’
 {: #p4}
 
 5\. “Now, when you are traveling, you should do it in this way. Supposing you are captured by bandits, don’t give rise to bad thoughts or produce an uplifted or lowered mind. As it was with earth, it’s likewise with water, fire, and air. They accept what’s bad and what’s lovely, but there’s never any uplifted or lowered mind. Produce kindness, compassion, joy, and equanimity towards all sentient beings. The reason is that even the practice of the good teaching is dispensable, so why would a bad teaching be studied?
@@ -67,20 +67,21 @@ I’ll throw him into the ocean by his legs!”
 15\. “Corrupt Māra Pāpīyān’s hate grew larger, so he told his great lion general, ‘Quickly! Gather a fourfold army and go attack that ascetic! We’ll see what strength he has and whether it’s capable of matching mine in battle!’
 {: #p15}
 
-16\. “I then thought: ‘To fight even an ordinary man wouldn’t be quiet, so what will it be like to fight the high ranking being of the desire realm? Surely, with him it will be little more than an argument.’
+16\. “I then thought: ‘To fight even an ordinary man wouldn’t be quiet, so what will it be like to fight the highest ranking being of the desire realm? Surely, it will be little more than an argument with him.’
 {: #p16}
 
-17\. “At that point, monks, I put on the armor of kindness, picked up the bow of concentration and arrows of wisdom, and waited for his great army. Corrupt Māra was the great leader of an army of eighteen million. Their faces were all different from each other. Those of monkeys, apes, and lions approached me.
+17\. “At that point, monks, I put on the armor of kindness, picked up the bow of concentration and arrows of wisdom, and waited for his great army. Corrupt Māra was the great leader of an army of eighteen million. Their faces were all different from each other as those of monkeys, apes, and lions approached me.
 {: #p17}
 
-18\. “Some in that army of rākṣasas had one type of body and another type of head. Some had ten bodies that shared a single head. Some had two shoulders and three necks. Some had a mouth in their chests. Some had a single hand, some had [760c] two hands, and others had four hands. Some had both hands raised over their heads and dead snakes in their mouths. Some had fire burning on their heads, and others shot fire from their mouths. Some used both hands to stretch their mouths wanting to devour what was in front of them. Some had exposed bellies facing him and were armed with swords and spears. Some carried mallets, some carried boulders, and some hauled stones. Some carried large trees. Some had a pair of legs on top, and others had heads on their bottoms. Some rode elephants, lions, tigers, wolves, and poisonous serpents. Some came on foot, and some flew in the air. Corrupt Māra led that army and advanced to surround the bodhi-tree.
+18\. “Some in that army of rākṣasas had one type of body and another type of head. Some had ten bodies that shared a single head. Some had two shoulders and three necks. Some had a mouth in their chests. Some had a single hand, some had [760c] two hands, and others had four hands. Some had both hands raised over their heads and dead snakes in their mouths. Some had fire burning on their heads, and others shot fire from their mouths. Some used both hands to stretch their mouths wanting to devour what was in front of them. Some had exposed bellies and were armed with swords and spears. Some carried mallets, some carried boulders, and some hauled stones. Some carried large trees. Some had a pair of legs on top, and others had heads on their bottoms. Some rode elephants, lions, tigers, wolves, and poisonous serpents. Some came on foot, and some flew in the air. Corrupt Māra led that army and advanced to surround the bodhi tree.
 {: #p18}
 
-19\. “Māra Pāpīyān stood to my left and said to me, ‘Get up this instant, ascetic!’ I stayed silent and didn’t replied while he said this three times.
+19\. “Māra Pāpīyān stood to my left and said to me, ‘Get up this instant, ascetic!’ I stayed silent and didn’t reply while he said this three times.
 {: #p20}
 
 20\. “Māra then said to me, ‘Ascetic! Aren’t you afraid of me?’
-“I told him, ‘Now, I hold my mind without anything to fear.’
+
+“I told him, ‘Now, I maintain my mind without anything to fear.’
 {: #p20}
 
 21\. “Māra then said, ‘Ascetic, don’t you see my fourfold army? You are just one man. You have no weapons of war, just a bald head and bare body, wearing those three garments; yet, you say, “I have nothing to fear”!’
@@ -94,10 +95,10 @@ And I hold in hand the arrows of wisdom.\\
 Virtuous actions are my many warriors,\\
 And now they will destroy your army.’
 
-23\. “Māra Pāpīyān said to me, ‘I’m doing you a favor, ascetic. If I wasn’t speaking to you, they would grab you and burn your body to ashes right now. Moreover, ascetic, your appearance is handsome, in the prime of life, and beautiful. You came from a lineage of warrior wheel-turning kings. Get up this instant and go back. Practice the five pleasures. I will lead you there peaceably, so you can become a wheel-turning sage king.’
+23\. “Māra Pāpīyān said to me, ‘I’m doing you a favor, ascetic. If I wasn’t speaking to you, they would grab you and burn your body to ashes right now. Moreover, ascetic, your appearance is handsome, in the prime of life, and beautiful. You came from a lineage of warrior wheel-turning kings. Get up this instant and go back. Partake of the five pleasures. I will lead you there peaceably, so you can become a wheel-turning sage king.’
 {: #p23}
 
-“I again replied to Pāpīyān, ‘What you’re talking about is impermanent and liable to change. It’s can’t last long, so I will abandon it. It’s not something I desire.’
+“I again replied to Pāpīyān, ‘What you’re talking about is impermanent and liable to change. It can’t last long, so I will abandon it. It’s not something I desire.’
 
 24\. “Corrupt Māra Pāpīyān again said to me, ‘Ascetic! What do you seek here today? What is it that you want?’
 {: #p24}
@@ -107,7 +108,7 @@ And now they will destroy your army.’
 25\. “Māra replied to me, ‘If you don’t get up from that seat right now, ascetic, then I will grab you by the legs and throw you into the ocean!’
 {: #p25}
 
-“I then replied to Pāpīyān, ‘I’ve observed those up in heaven and among humans. Whether Māra, gods, humans, or non-humans, that fourfold army of yours won’t be able to disturb even a hair on my body.’
+“I then replied to Pāpīyān, ‘I’ve observed those up in heaven and among humans. Whether demons, gods, humans, or non-humans, that fourfold army of yours won’t be able to disturb even a hair on my body.’
 
 26\. “Māra replied, ‘Ascetic, do you want to do battle [761a] with us today?’
 {: #p26}
@@ -122,18 +123,21 @@ And now they will destroy your army.’
 28\. “Māra said to me, ‘What’s your reason for destroying these conceits?’
 {: #p28}
 
-“I replied, ‘Pāpīyān, you should know, there are the concentration of kindness, concentration of compassion, concentration of joy, and concentration of equanimity and the concentration of emptiness, concentration of wishlessness, and concentration of signlessness. From the concentration caused by kindness, the concentration of compassion is discerned. Conditioned by the concentration of compassion, the concentration of joy is attained. Conditioned by the concentration of joy, the concentration of equanimity is attained. From the concentration of emptiness, the concentration is wishlessness is attained. Because of the concentration of wishlessness, the concentration of signlessness is attained. Using the power of these concentrations, I will do battle with you. When their practice is complete, then suffering is ended. When suffering is ended, then the bonds are ended. When the bonds are ended, then I’ll attain Nirvāṇa.’
+“I replied, ‘Pāpīyān, you should know, there are the concentration of kindness, concentration of compassion, concentration of joy, and concentration of equanimity and the concentration of emptiness, concentration without aspirations, and concentration without signs. From the concentration caused by kindness, the concentration of compassion is discerned. Conditioned by the concentration of compassion, the concentration of joy is attained. Conditioned by the concentration of joy, the concentration of equanimity is attained. From the concentration of emptiness, the concentration without aspirations is attained. Because of the concentration without aspirations, the concentration without signs is attained. Using the power of these concentrations, I will do battle with you. When their practice is complete, then suffering will be ended. When suffering is ended, then the bonds will be ended. When the bonds are ended, then I’ll attain Nirvāṇa.’
 
 29\. “Māra said to me, ‘Ascetic, you’ll destroy the teaching with the teaching?’
+
 “I replied, ‘It’s possible to destroy the teaching with the teaching.’
 {: #p29}
 
 30\. “Māra asked me, ‘How do you destroy the teaching with the teaching?’
+
 “I then told him, ‘With right view, wrong view is destroyed. With wrong view, right view is destroyed. Right control destroys wrong control, and wrong control destroys right control. Right speech destroys wrong speech, and wrong speech destroys right speech. Right action destroys wrong action, and wrong action destroys right action. Right livelihood destroys wrong livelihood, and wrong livelihood destroys right livelihood. Right method destroys wrong method, and wrong method destroys right method. Right mindfulness destroys wrong mindfulness, and wrong mindfulness destroys right mindfulness. Right concentration destroys wrong concentration, and wrong concentration destroys right concentration.’
 {: #p30}
 
 31\. “Māra said to me, ‘Ascetic, although you say this today, it’s a difficult thing to do. Get up right now, and I won’t throw you into the ocean.’
-“I again to Pāpīyān, ‘You made merits that have granted you only one thing. You’ve become the Māra King of the desire realm. In the past, I created virtues that cannot be described. To do what you’ve said now is something that’s difficult.’
+
+“I again said to Pāpīyān, ‘You made merits that have granted you only one thing. You’ve become the Māra King of the desire realm. In the past, I created virtues that cannot be described. To do what you’ve said now is something that’s difficult.’
 {: #p31}
 
 32\. “Pāpīyān replied, ‘You now are a witness to the merits that I’ve made. You claim that the merits you’ve made are countless, but who can bear witness to that?’
@@ -142,23 +146,23 @@ And now they will destroy your army.’
 “It was then, monks, that I reached down with my right hand and touched the ground, and said, ‘The earth is a witness to the virtues that I’ve made.’
 
 
-33\. “When I said that, the earth spirit rose up out of the ground with its palms together, and said, ‘Bhagavān, I will bear witness to it!’
+33\. “When I said that, the earth spirit rose up out of the ground with its palms together and said, ‘Bhagavān, I will bear witness to it!’
 “When the earth spirit had finished saying this, Māra Pāpīyān felt dejected and miserable. He retreated and disappeared.
 {: #p33}
 
-34\. “Monks, it’s by this method that you should know that even the teaching ceases, [761b] so why wouldn’t what’s not the teaching? For a long time, I have taught you this one parable sutra of awakening. If you don’t investigate its words, how will you understand it’s meaning? The reason for that is this teaching is obscure. Disciples and pratyeka-buddhas who cultivate this teaching win great virtue and obtain the immortal and untroubled state.
+34\. “Monks, it’s by this method that you should know that even the teaching ceases, [761b] so why wouldn’t what’s not the teaching? For a long time, I have taught you this one parable sutra of awakening. If you don’t investigate its words, how will you understand its meaning? The reason for that is this teaching is obscure. Disciples and pratyeka-buddhas who cultivate this teaching win great virtue and obtain the immortal and untroubled state.
 {: #p34}
 
-35\. “How is that called the parable of riding a raft? It refers to relying on conceit to cease conceit. Once conceit is fully ceased, there are no more thoughts of vexation and confused ideas. It’s like a jackal skin that’s hard to work with.  When it’s hit with a fist, there’s no sound, and the leather lacks toughness. This is likewise. When a monk’s conceit is gone, there’s nothing to uplift or lower [his mind].
+35\. “How is that called the parable of riding a raft? It refers to relying on conceit to cease conceit. Once conceit is fully ceased, there are no more afflicted thoughts and confused ideas. It’s like a jackal skin that’s hard to work with.  When it’s hit with a fist, there’s no sound, and the leather lacks toughness. This is likewise. When a monk’s conceit is gone, there’s nothing to uplift or lower [his mind].
 {: #p35}
 
 36\. “Therefore, I tell you now, ‘If you were captured by bandits, then don’t produce bad thoughts. You should encompass everything in all directions with kindness, just like that supple hide, and for a long time you’ll win an untroubled state.’ Thus, monks, you should think.”
 {: #p36}
 
-37\. When he explained this teaching while seated above, the dust and defilement 3,000 young gods was gone, and they attained purification of the Dharma eye. 60 monks abandoned the Dharma robes to practice in white clothes, and another 60 monks ended their contaminants, freed their minds, and attained purification of the Dharma eye.
+37\. When he explained this teaching while seated above, the dust and defilement 3,000 young gods was removed, and their Dharma eyes were purified. Sixty monks abandoned the Dharma robes to practice in white clothes. Another sixty monks ended their contaminants, freed their minds, and purified their Dharma eyes.
 {: #p37}
 
-38\. The monks who heard what the Buddha taught rejoiced and approved.
+38\. The monks who heard what the Buddha taught then rejoiced and approved.
 {: #p38}
 
 ### Notes
@@ -168,7 +172,7 @@ And now they will destroy your army.’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 27 September 2020
+Last Revised: 7 July 2021
 {: .revised}
 
 ---
