Removed deprecated folders and relocated alternate translations to their correct folders. (Watch for broken links)

--- a/01_agama/other/T101_15.md
+++ b/01_agama/other/T101_15.md
@@ -24,7 +24,7 @@ next: T102.html
 {:#p4}
 
 ### Notes
-1. {:#n1} This sūtra is a partial parallel to [SN 54.1](https://suttacentral.net/sn54.1){:target="_blank"}, [MN 118](https://suttacentral.net/mn118){:target="_blank"}, and [SĀ 14.3](../SA_14/SA14_3.html). [\[back\]](#ref1)
+1. {:#n1} This sūtra is a partial parallel to [SN 54.1](https://suttacentral.net/sn54.1){:target="_blank"}, [MN 118](https://suttacentral.net/mn118){:target="_blank"}, and [SĀ 14.3](../samyukta/14/SA14_3.html). [\[back\]](#ref1)
 
 ---
 
