--- a/01_agama/samyukta/14/SA14_3.md
+++ b/01_agama/samyukta/14/SA14_3.md
@@ -44,6 +44,8 @@ next: SA14_17.html
 11\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
 {: #p11}
 
+<!--- Add an endnote for parallels, note that T101.15 is in other folder -->
+
 ---
 
 Translator: Charles Patton
