--- a/02_avadana/dharmapada/T211/T211c1v3.md
+++ b/02_avadana/dharmapada/T211/T211c1v3.md
@@ -4,7 +4,7 @@ title: 'Dharma Verse Stories | 1. Impermanence | 2. King Prasenjit’s Queen'
 type: kramdown
 base: ../../../
 previous: T211c1v1-2.html
-next: index.html
+next: T211c1v4-6.html
 ---
 
 # [Dharma Verse Stories](index.html)
@@ -12,23 +12,30 @@ next: index.html
 ### 2. King Prasenjit’s Queen
 
 Once, the Buddha was staying at a monastery in Śrāvastī teaching the Dharma to gods, people, nāgas, and spirits.
+{:#p1}
 
 At the time, King Prasenajit’s chief wife was over 90 years old and suddenly fell gravely ill. The doctor who treated her erred, and she passed away as a result. The king and the country’s ministers conducted the funeral procession according to the law, and her spirit was moved to a tomb. When the procession was complete, they passed by the Buddha as they returned. Dresses informally and bare-footed, Prasenajit bowed to the Buddha’s feet. The Buddha told him to have a seat and asked, “King, where have you come from? You’re dressed coarsely and look different. What have you been doing?”
+{:#p2}
 
 The king bowed his head and said, “The country’s queen was over 90 years old. She fell gravely ill and abruptly passed away. We took her away in a coffin and performed the funeral at her tomb. As we were starting to return, we spotted the noble sage.”
+{:#p3}
 
 The Buddha told the king, “Since ancient times, there’ve been four great fears: (1) To be born and then (2) become old, withered, ill, and lusterless and (3) to die and then (4) for one’s spirit to depart and be separated from family and friends. These are the four. People aren’t given time to prepare; all things are impermanent and with difficulty do they remain for long. In a day, they are gone. A person’s life is likewise. Like the five rivers that flow non-stop day and night, a person’s life rushes by in the same way.”
+{:#p4}
 
 The Bhagavān then spoke in verse:
+{:#p5}
 
 * {:.verse}“Like a river’s rapid current\\
 That leaves and doesn’t come back,\\
 So too is a person’s life;\\
-The departed don’t return.”
+The departed don’t return.” (3)
 
 The Buddha told the great king, “Everyone in the world is so; there’s none who remain for long. They will return to death; none are free of it. Going back to former kings, Buddhas, realized men, and sages of the five powers, they are all in the past. Feeling sad because the bodies of those who can’t remain die is pointless. A man is mourned by his filial son when he dies. He makes merits and virtue because they will return to him, but such fortunes are like food to a man far away when they depart.”
+{:#p6}
 
 When the Buddha said this, not one of the king and his ministers failed to rejoice. They forgot their sorrow, and their troubles were dispelled. Everyone who had come found the path.
+{:#p7}
 
 ---
 
