--- a/02_avadana/dharmapada/T211/T211c1v1-2.md
+++ b/02_avadana/dharmapada/T211/T211c1v1-2.md
@@ -12,26 +12,35 @@ next: T211c1v3.html
 ### 1. Śakra Attains Stream Entry
 
 Once, Śakra the Lord of Gods had five signs that he would part with his body. He knew that his life was at its end, he’d take a lower birth in the world, and his spirit would be received in a womb in a potter’s family. What were the five signs of this? 1) His body’s radiance had ceased, 2) the flowers atop his head had withered, 3) he didn’t enjoy sitting as he had before, 4) his armpits began to stink of sweat, and 5) dust clung to his body.
+{:#p1}
 
 He knew from these five events that his merits were exhausted, and he was extremely sad. He thought to himself about how there was only the Buddha in the three realms who could save people from misery. He decided to go straightaway to the Buddha.
+{:#p2}
 
 At the time, the Buddha was staying in a cave on Mount Gṛdhrakūṭa and had entered a samādhi of universal salvation while sitting in meditation. The Lord of Gods saw the Buddha and prostrated himself to him. With all his heart, he took refuge three times in the Buddha, Dharma, and Noble Saṅgha. Before he had gotten up from taking refuge, he suddenly disappeared, and his spirit went into a mother’s womb in a potter’s family to become her son.
+{:#p3}
 
 His spirit was aware of [his mother] running among unbaked clay tiles and breaking the vases that weren’t baked, and the owner beat her, injuring her womb. Śakra’s spirit then left her body, and he was again endowed with the five virtues, becoming the Lord of Gods again.
+{:#p4}
 
 The Buddha emerged from samādhi and praised him, “Good, Lord of Gods! You were able to take refuge in the three worthies at the very end of your life, and it negated your misdeeds. You won’t go through suffering again.”
+{:#p5}
+
 The Bhagavān then spoke in verse:
+{:#p6}
 
 * {:.verse}“What’s made isn’t permanent;\\
 Its nature is to rise and pass away.\\
 What’s born, abruptly dies;\\
-Cessation of this is happiness.
+Cessation of this is happiness. (1)
+
 * {:.verse}Like that potter’s family\\
 Shaping clay into vessels\\
 That will all be broken,\\
-So too is a person’s life.”
+So too is a person’s life.” (2)
 
 Lord Śakra heard these verses and realized the meaning of impermanence, comprehended the change of misdeeds and merits, and understood the source of rising and passing away. He rejoiced and approved, attaining the path of stream entry.
+{:#p7}
 
 ---
 
